chore: renomeando o pacote de server para api

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@barber-project/server",
+  "name": "@barber-project/api",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
