--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "../../tsconfig.json",
   "include": [
-    "src"
-  ]
+    "src",
+    "index.ts"
+  ],
+  "exclude": [
+    "tests"
+  ],
 }
