--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -2,5 +2,9 @@
   "name": "infra",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "private": "true",
+  "dependencies": {
+    "@barber-project/domain": "*"
+  }
 }
