--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "lerna run build "
   },
-  "author": "Jonathan Rehem",
+  "author": "Jonathan Rehem <jonathan.de.oliveira@live.com>",
   "license": "ISC",
   "workspaces": {
     "packages": [
@@ -17,10 +18,17 @@
   },
   "devDependencies": {
     "@barber-project/eslint-config": "*",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.197",
+    "@swc/jest": "^0.2.21",
     "@types/jest": "^28.1.0",
     "jest": "^28.1.0",
+    "lerna": "^5.1.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.4",
     "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.3"
   }
 }
